tests/NormalTests/paczka1/small_fuzzy/27953838.err
Error in line 2: xNuX¯4zbeBb S783 33,4
Error in line 1: TIjPd7H8l A662 9,1
Error in line 9: TIjPd7H8l A253 8,4
Error in line 11: xNuXq4zbeBb A662 86,9
